tests/compilefail29.out
[1mtests/compilefail29.pas:5:14: [0m[1m[91merror:[0m Undefined Identifier: 'a'
     5 | 	negpi = -a;