tests/compilefail29.pas
program compilefail29(output);
{cannot define a constant using unknown identifier}

const pi = 3.14;
	negpi = -a;

var a:integer;

begin
	writeln(pi);
	writeln(negpi);
end.
